--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.5.3</version>
+				<goals>
+					<goal>deploy</goal>
+				</goals>
 			</plugin>
 		</plugins>
 	</build>
