--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,10 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.5.3</version>
-				<goals>
-					<goal>deploy</goal>
-				</goals>
+				<configuration>
+					<releaseProfiles>release</releaseProfiles>
+					<goals>deploy</goals>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
