--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	</properties>
 
 	<scm>
-		<developerConnection>https://github.com/sai-pullabhotla/test.git</developerConnection>
+		<developerConnection>scm:git:https://github.com/sai-pullabhotla/test.git</developerConnection>
 	</scm>
 
 	<dependencies>
