--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.5.3</version>
 				<configuration>
-					<releaseProfiles>release</releaseProfiles>
+<!-- 					<releaseProfiles>release</releaseProfiles> -->
 					<goals>deploy</goals>
 				</configuration>
 			</plugin>
