--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.jmethods</groupId>
 	<artifactId>test</artifactId>
-	<version>0.0.4-SNAPSHOT</version>
+	<version>0.0.4</version>
 	<packaging>jar</packaging>
 
 	<name>test</name>
@@ -32,7 +31,7 @@
 		<connection>scm:git:https://github.com/sai-pullabhotla/test.git</connection>
 		<developerConnection>scm:git:https://github.com/sai-pullabhotla/test.git</developerConnection>
 		<url>scm:git:https://github.com/sai-pullabhotla/test.git</url>
-		<tag>HEAD</tag>
+		<tag>test-0.0.4</tag>
 	</scm>
 
 
